✨ Добавил возможность просматривать провайдера девайса

--- a/web/ui/html/device.html
+++ b/web/ui/html/device.html
@@ -86,6 +86,8 @@
               <div class="block_custom">
                 <span class="descriptions">Владелец: {{ device.device.account.fullname }}</span>
                 <span class="descriptions">Счёт: {{ device.device.account.id }}</span>
+                <span class="descriptions">Провадер: {{ device.device.account.provider.displayName }}</span>
+                <!-- <span class="descriptions">{{ device.device.account }}</span> -->
               </div>
               <!-- <div class="block">
                 <span class="title">Характеристики:</span>
