--- a/web/ui/html/dashboard.html
+++ b/web/ui/html/dashboard.html
@@ -136,21 +136,10 @@
                           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"/><circle cx="12" cy="5" r="1"/><circle cx="12" cy="19" r="1"/></svg>
                         </button>
                         <div class="device-cell image">
-                          {% if device.deviceType.deviceType in ['s605', 's605a', 'v.605', 's500', 'S500'] %}
-                            <img src="https://tvip.tv/images/device/700%D1%85450_1.png" alt="device">
-                            <span>{{ device.deviceType.deviceType }}</span>
-                          {% elif device.deviceType.deviceType in ['s410', 'S410'] %}
-                            <img src="https://tvip.tv/images/device/700%D1%85450.png" alt="device">
-                            <span>{{ device.deviceType.deviceType }}</span>
-                          {% elif device.deviceType.deviceType in ['browser', 'WeebOS', 'UNKNOWN', 'lG', 'tvip'] %}
-                            <img src="https://thumb.tildacdn.com/tild6135-6538-4937-a439-633866326134/-/resize/42x/-/format/webp/1-11.png" alt="device">
-                            <span>{{ device.deviceType.deviceType }}</span>
-                          {% else %}
-                            <img src="https://tvip.tv/images/device/705/700x450.png" alt="device">
-                            <span>{{ device.deviceType.deviceType }}TVIP</span>
-                          {% endif %}
-                        </div>
-                        <div class="device-cell category"><span class="cell-label">Лицевой счёт:</span>{{ device.account.login }}</div>
+                          <img src="{{ device.image_url }}" alt="device">
+                          <span>{{ device.device_name }}</span>
+                        </div>                   
+                        <div class="device-cell category"><span class="cell-label">Лицевой счёт:</span>{{ device.operation_system }}</div>
                         <div class="device-cell status-cell">
                           <span class="cell-label">Статус:</span>
                           <span class="status {% if device.wsConnected %}active{% else %}disabled{% endif %}">
@@ -158,8 +147,8 @@
                           </span>
                         </div>
                         <div class="device-cell sales"><span class="cell-label">ID:</span>{{ device.id }}</div>
-                        <div class="device-cell stock"><span class="cell-label">Mac:</span>{{ device.macAddress }}</div>
-                        <div class="device-cell price"><span class="cell-label">Онлайн:</span>{{ device.lastOnline | date }}</div>
+                        <div class="device-cell stock"><span class="cell-label">Mac:</span>{{ device.mac }}</div>
+                        <div class="device-cell price"><span class="cell-label">Онлайн:</span>{{ device.last_online }}</div>
                     </div>
                   </a>
               {% endfor %}
